--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,8 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    container:
+      image: archlinux:latest
 
     steps:
+    - name: Install dependencies
+      run: |
+        pacman -Syu --noconfirm
+        pacman -S --noconfirm base-devel gtk4 gtk4-layer-shell pkgconf git
+
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
