--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,14 @@ jobs:
         pacman -Syu --noconfirm
         pacman -S --noconfirm base-devel gtk4 gtk4-layer-shell pkgconf git
 
+      - name: Setup rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy,rustfmt
+
+      - name: Load rust cache
+        uses: Swatinem/rust-cache@v2
+
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
